--- a/mbta/index.html
+++ b/mbta/index.html
@@ -5,8 +5,9 @@
 		<meta name="viewport" content="initial-scale=1.0">
 		<title>MBTA Red Line Locator</title>
 		<link rel="stylesheet" href="style.css" type="text/css" />
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
-		<script lang="javascript" src="scrpt.js" type="text/javascript"></script>
+		 <script async defer
+      	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCxExIcDOvYcXqR44TOGucJssWznBUYdjE&callback=initMap"></script>
+		<script lang="javascript" src="script.js" type="text/javascript"></script>
 	</head>
 	
 	<body>
