modified index to include jquery features

--- a/captainslog/index.html
+++ b/captainslog/index.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>
-        // Your work will be done here...
+        $( document ).ready(function() {
+            var i = 0;
+            while (i%1==0) {
+                Date = new Date();
+                localStorage.entry = $('#msg').val();
+                elem = document.getElementById("log");
+                elem.innerHTML = "<p>" + Date.prototype.toDateString() + ": " + localStorage['entry'];
+                i++;
+            }
+        });
     </script>
 </head>
 
