Added styling elements in css and index

--- a/security/index.html
+++ b/security/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+	<h3>Application Security Report by Consultant Yash Gurditta</h3><hr>
 	<p>As a security consultant, I've been hired to detect and resolve security issues that exist in the application.
 	The application is a modification of the popular game, 2048. Upon completion, the application allows a user to input
 	their username. The username is then stored with the user's other game details such as their final score and board
