--- a/security/index.html
+++ b/security/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Security Analysis</title>
 	<link rel="stylesheet" href="style.css" type="text/css">
+	<meta charset="UTF-8">
 </head>
 <body>
 	<h3>Application Security Report by Consultant Yash Gurditta</h3><hr>
@@ -28,25 +29,25 @@
 	For example, I was able to enter letters in a data key for storing numbers.</p>
 	<p>
 		<ul>
-			<li>Issue #1 Found: Bad Coding Practices - allowing incorrect quantity and types of data</th>
+			<li>Issue #1 Found: Bad Coding Practices - allowing incorrect quantity and types of data</li>
 			<li>Location: URL is https://stormy-reef-94850.herokuapp.com/</li>
 			<li>Severity: Medium - Is not directly harmful but can create privacy breaches to the database</li>
 			<li>I made a POST request with fewer data values than I should have been able to. The data I submitted was inserted as is,
 			without checking for the data quantity and types. View missing grid details below.</li>
-			<img src="pics/terminal_redirect.png" /><br>
-			<img src="pics/score_board.png" id="long" /><br>
+			<img src="pics/terminal_redirect.png" alt="terminal redirect image"/><br>
+			<img src="pics/score_board.png" id="long" alt ="score board image" /><br>
 			<li>Recommendation: Add an if statement in the POST method of the index.js file such that it checks that all data types exists and
 			are not null. Also ensure that no other key value pairs are being entered into the database that are not expected.</li>
 		</ul>
 	</p>
 	<p>
 		<ul>
-			<li>Issue #2 Found: Database Injection - Redirecting Webpage</th>
+			<li>Issue #2 Found: Database Injection - Redirecting Webpage</li>
 			<li>Location: URL is https://stormy-reef-94850.herokuapp.com/</li>
 			<li>Severity: High - can be used for malicious attacks such as taking user data. Imagine a hacker creating the same page but redirecting
 			users to their version and then collecting user info to their own databse.</li>
 			<li>I injected a line of code into the database through curl to make it go to another webpage.</li>
-			<img src="pics/terminal_redirect.png" /><br>
+			<img src="pics/terminal_redirect.png" alt="terminal redirect image" /><br>
 			<li>Difficult to show this actually occuring in a screenshot or photo. If https://stormy-reef-94850.herokuapp.com/ is typed in browser, 
 			the page will redirect.</li>
 			<li>Recommendation: Add a line of code that sanitizes and input data. In the index.js file under the POST method where the request string 
@@ -55,12 +56,12 @@
 	</p>
 	<p>
 		<ul>
-			<li>Issue #3 Found: Database Injection - Alert Pop Up Box</th>
+			<li>Issue #3 Found: Database Injection - Alert Pop Up Box</li>
 			<li>Location: URL is https://stormy-reef-94850.herokuapp.com/</li>
 			<li>Severity: Medium - can be used to make site look unprofessional</li>
 			<li>I injected a line of code into the database through curl to make some text pop up in an alert box</li>
-			<img src="pics/terminal_alert.png" /><br>
-			<img src="pics/alert_box.png" /><br>
+			<img src="pics/terminal_alert.png" alt="terminal alert box image" /><br>
+			<img src="pics/alert_box.png" alt="alert box on browser image" /><br>
 			<li>Recommendation: Add a line of code that sanitizes and input data. In the index.js file under the POST method where the request string 
 			is taken in, it should be sanitized prior to being entered into the database. Sample code shown at bottom of report.</li>
 		</ul>
